--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = '1.3.72'
+        archLifecycleVersion = '1.1.1'
+        room_version = '2.2.5'
+        coroutine_version = '1.3.7'
+        gradleVersion = '4.0.1'
+        navigationVersion = '1.0.0'
+        fragment_version = '1.4.1'
+        lifecycle_version = "2.5.0-rc02"
+        dataBindingCompilerVersion = gradleVersion // Always need to be the same.
+    }
     repositories {
         google()
         mavenCentral()
