--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ buildscript {
         fragment_version = '1.4.1'
         lifecycle_version = "2.5.0-rc02"
         dataBindingCompilerVersion = gradleVersion // Always need to be the same.
+        // testing
+        junitVersion = '4.13.2'
+        espressoVersion = '3.4.0'
+        androidxJunitVersion = '1.1.3'
+        coreTestingVersion = '2.1.0'
     }
     repositories {
         google()
