--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,29 @@ buildscript {
     }
     repositories {
         google()
+        jcenter()
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
-
+        classpath("org.jlleitschuh.gradle:ktlint-gradle:10.3.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+        maven {
+            url 'https://maven.google.com'
+        }
+        apply plugin: "org.jlleitschuh.gradle.ktlint"
     }
 }
 
