add chips filter on history screen

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         navigationVersion = '1.0.0'
         fragment_version = '1.4.1'
         lifecycle_version = "2.5.0-rc02"
+        paging_version = "3.1.1"
+
         dataBindingCompilerVersion = gradleVersion // Always need to be the same.
         // testing
         junitVersion = '4.13.2'
