--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
+
+    // Paging
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+
 }
