--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,8 +95,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
 
-    // Paging
-    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
 }
