refactoring with include dagger 2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.moneytracking">
 
     <application
+        android:name=".MoneyTrackApp"
         android:allowBackup="true"
 
         android:label="@string/app_name"
