--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -7,6 +6,7 @@ plugins {
     id 'org.jlleitschuh.gradle.ktlint'
     id 'androidx.navigation.safeargs'
 }
+
 
 android {
     compileSdk 31
@@ -30,6 +30,10 @@ android {
     // Enables viewBinding binding.
     buildFeatures {
         viewBinding = true
+    }
+
+    kapt {
+        generateStubs = true
     }
 
     dataBinding {
@@ -58,32 +62,30 @@ dependencies {
     implementation("androidx.fragment:fragment-ktx:$fragment_version")
 
     // ViewModel
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
 
     // Room libraries
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-// Kotlin Extensions and Coroutines support for Room
+    // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
-
-
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
-
     // view binding
     implementation 'com.android.databinding:viewbinding:4.0.1'
-
     implementation 'android.arch.lifecycle:extensions:1.1.0'
+
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
 
-
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+
     //Recyclerview
     implementation("androidx.recyclerview:recyclerview:1.2.1")
     //MPAndroidChart
@@ -96,6 +98,11 @@ dependencies {
     })
     androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
     androidTestImplementation "com.google.truth:truth:1.1.3"
+    //Dagger2
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
-
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
